--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 /* 헤더 */
 .header__container {
-  max-width: 1000px;
+  max-width: 950px;
   height: 100%;
   margin: 0 auto;
   display: flex;
@@ -52,10 +52,11 @@ body {
 /* 메인 컨텐츠 */
 
 #main-content {
-  max-width: 1000px;
+  max-width: 950px;
   height: 100%;
   margin: 20px auto;
   display: flex;
+  justify-content: space-between;
   background-color: transparent;
 }
 
@@ -74,7 +75,32 @@ body {
 }
 
 .story__list {
+  margin: 0;
+  padding: 0 20px;
   list-style: none;
+}
+.story__item {
+  width: 80px;
+  height: 100%;
+  font-size: 12px;
+  margin: 0;
+  float: left;
+}
+.story__item-profile {
+  width: 60px;
+  height: 60px;
+  border: 3px solid #ff4081;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.story__item-profile > img {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  border: 1px solid #9e9e9e;
 }
 
 /* post */
@@ -139,7 +165,7 @@ body {
 
 .feed {
   width: 100%;
-  height: 180px;
+  height: auto;
 }
 
 .feed__icon {
@@ -159,4 +185,38 @@ body {
 .fa-comment,
 .fa-sticky-note {
   font-size: 25px;
+}
+
+.feed__like-description {
+  font-size: 14px;
+  margin: 7px 20px;
+}
+
+.feed__post-description {
+  margin-left: 20px;
+  margin-bottom: 10px;
+}
+
+.feed__input {
+  width: 100%;
+  height: 55px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  border-top: 1px solid #9e9e9e;
+  padding: 0px 20px;
+}
+
+/* 사이드바 */
+
+#sidebar {
+  width: 300px;
+  height: auto;
+  background-color: #9e9e9e;
+  margin-top: 100px;
+}
+
+.recommand__list {
+  list-style: none;
 }
