--- a/style.css
+++ b/style.css
@@ -69,9 +69,13 @@ body {
 }
 
 .story__box {
-  overflow-x: hidden;
+  overflow-x: scroll;
   width: 100%;
   height: 100%;
+}
+
+.story__box::-webkit-scrollbar {
+  display: none;
 }
 
 .story__list {
