--- a/style.css
+++ b/style.css
@@ -32,6 +32,58 @@ body {
   align-items: center;
 }
 
+.header__input-box {
+  height: 27px;
+  border: 1px solid #dbdbdb;
+  border-radius: 3px;
+  position: relative;
+  color: #8e8e8e;
+  background-color: #fafafa;
+}
+
+.input-search {
+  font-size: 10px;
+  position: absolute;
+  padding: 8px;
+  z-index: 6;
+}
+
+.input-cancel {
+  font-size: 10px;
+  position: absolute;
+  padding: 8px;
+  right: 0px;
+  z-index: 6;
+}
+
+.header__input {
+  font-size: 14px;
+  outline: none;
+  border: 0px;
+  height: 20px;
+  padding: 3px 10px 3px 26px;
+  background-color: transparent;
+  position: relative;
+  z-index: 5;
+}
+
+.header__input::placeholder {
+  color: #8e8e8e;
+}
+
+.header__input-before {
+  color: #8e8e8e;
+  font-size: 14px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+}
+
 .header__nav {
   display: flex;
 }
@@ -441,7 +493,7 @@ body {
 }
 
 @media screen and (max-width: 630px) {
-  .header__input {
+  .header__input-box {
     display: none;
   }
 
