--- a/style.css
+++ b/style.css
@@ -84,6 +84,56 @@ body {
   z-index: 2;
 }
 
+.header__userinfo {
+  width: 243px;
+  max-height: 362px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  position: absolute;
+  z-index: 8;
+  right: -22px;
+  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.0975);
+  padding: 0;
+  margin: 0;
+}
+
+.header__userinfo-item {
+  width: 100%;
+  background-color: #fff;
+  padding: 8px 14px;
+  display: flex;
+  border-bottom: 1px solid #dbdbdb;
+}
+
+.userinfo-prifile-img {
+  width: 35px;
+  height: 35px;
+  border: 3px solid #ff4081;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.prifile-img {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  border: 1px solid #9e9e9e;
+}
+
+.userinfo-profile-right {
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+}
+
+.profile-name {
+  color: #262626;
+  font-weight: bold;
+}
+
 .header__nav {
   display: flex;
 }
