JS : 팔로우 버튼 클릭시 팔로잉으로 변경

--- a/style.css
+++ b/style.css
@@ -524,10 +524,18 @@ body {
 }
 
 .recommand__right {
+  cursor: pointer;
+}
+
+.follow {
   font-size: 12px;
   font-weight: bold;
   color: #0095f6;
-  cursor: pointer;
+}
+
+.following {
+  font-size: 12px;
+  font-weight: bold;
 }
 
 /* Media Query */
